# TempTasks

./: .gitignore  CMakeLists.txt  LICENSE
.github/scripts/: install_cuda.sh  install_swiftshader.sh
.github/workflows/: cmake.yml
libs/: CMakeLists.txt
libs/base/libbase/: math.h  string_utils.h
libs/gpu/: CMakeLists.txt
libs/gpu/libgpu/: device.cpp  device.h
libs/gpu/libgpu/cuda/cu/: common.cu
libs/gpu/libgpu/opencl/: device_info.h  engine.cpp  engine.h
libs/gpu/libgpu/opencl/tests/: aplusb_test.cpp
libs/gpu/libgpu/vulkan/: CMakeLists.txt  device.cpp  engine.cpp  utils.h
libs/gpu/libgpu/vulkan/tests/: aplusb_test.cpp  atomic_add_test.cpp  batched_binary_search_test.cpp  buffers_magic_guards_test.cpp  interpolation_test.cpp  rasterization_blending_test.cpp  rasterization_test.cpp
libs/gpu/libgpu/vulkan/tests/kernels/: image_interpolation.comp
libs/utils/libutils/: misc.cpp  misc.h
scripts/: configure-linux.sh  configure-windows.txt
src/: 100_main_aplusb.cpp  110_main_render_triangle.cpp  120_main_render_gnome.cpp  130_main_fidelity_fx_sharpening.cpp
src/utils/: happly.h  read_ply_with_uv.cpp  read_ply_with_uv.h
src/vk/: 100_aplusb.comp  110_render_triangle.vert  111_render_triangle.frag  120_gnome_min_max.comp  121_render_gnome.vert  122_render_gnome.frag  130_fildelity_fx_cas_sharpening.comp  defines.h  kernels.cpp  kernels.h
